# good-morning-agent

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT_SUMMARY.md  Dockerfile  LICENSE  MIGRATION_UV.md  Makefile  PR_SUMMARY.md  README.md  TEMP_README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_end_to_end.py  test_real_data.py
config/: .env.example
docs/: PRD.md  README.md  REAL_EMAIL_TESTING.md  newsletter-data-source-design.md  system-architecture-design.md  technical-implementation-guide.md
scripts/: configure_env.py  install_hooks.py  monitor_email.py  security_check.py  setup_dev.py  test_real_email.py  verify_gmail_settings.py
src/: main.py
src/cli/: __init__.py  app.py  config.py  runner.py
src/collectors/: __init__.py  email_reader.py
src/processors/: __init__.py  error_tracker.py  models.py  newsletter_processor.py  summarizer.py
src/senders/: __init__.py  email_sender.py  html_formatter.py  message_formatter.py  models.py  security_manager.py
src/utils/: __init__.py  config.py
tests/: .env.test  README.md  __init__.py  conftest.py  run_tests.py
tests/data/fixtures/: sample_newsletters.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_email_collection_integration.py  test_email_sending_integration.py  test_processors_integration.py  test_real_email_integration.py
tests/unit/collectors/: __init__.py  test_email_reader.py
tests/unit/processors/: test_error_tracker.py  test_models.py  test_newsletter_processor.py  test_summarizer.py
tests/unit/senders/: __init__.py  test_email_sender.py  test_message_formatter.py  test_models.py  test_security_manager.py
